[project]
name = "graphene-luna"
version = "0.2.0"
description = "Websocket backend for GraphQL (Graphene) subscriptions, does not require Django Channels"
authors = [
    {name = "Paul Bailey", email = "paul.bailey@cognitivespace.com"},
]
dependencies = [
    "graphene-django>=3.0.0",
    "websockets>=10.4",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "BSDv3"}

[project.urls]
homepage = "https://github.com/cognitive-space/graphene-luna"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
