[project]
name = "graphene-luna"
version = "1.0.0"
description = "Websocket backend for GraphQL (Graphene) subscriptions, does not require Django Channels"
authors = [
    {name = "Paul Bailey", email = "paul.bailey@cognitivespace.com"},
]
dependencies = [
    "graphene-django>=3.0.0",
    "websockets>=10.4",
    "django-ws>=1.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "BSDv3"}

[project.urls]
homepage = "https://github.com/cognitive-space/graphene-luna"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest-django>=4.5.2",
    "uvicorn>=0.20.0",
    "gunicorn>=20.1.0",
    "pytest-asyncio>=0.20.2",
    "pytest-xprocess>=0.21.0",
    "python-graphql-client @ git+https://github.com/pizzapanther/python-graphql-client.git",
]
